klass basic CRUD done

--- a/app/assets/stylesheets/api/study_sets.scss
+++ b/app/assets/stylesheets/api/study_sets.scss
@@ -50,6 +50,10 @@ th, td {
   min-height: 40px;
 }
 
+td input{
+  border: none;
+}
+
 .study_set_form {
   padding: 15px;
   background: lightgreen;
