--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,8 @@
  */
 
 header, body, ul, li, div,
-form, input, textarea, footer, p {
+form, input, textarea, footer, p
+h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
   border: 0;
@@ -82,4 +83,26 @@ input[type="submit"], a {
   content: "";
   display: block;
   clear: both;
+}
+
+
+h1 {
+  font-weight: bolder;
+  font-size: xx-large;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: x-large;
+}
+
+h3
+ {
+  font-weight: normal;
+  font-size: large;
+}
+
+h4 {
+  font-weight: normal;
+  font-size: medium;
 }
