--- a/app/assets/stylesheets/api/index.css
+++ b/app/assets/stylesheets/api/index.css
@@ -44,5 +44,5 @@ button.list-group-item .list-group-item-heading
 }
 
 button.list-group-item:hover {
-  background-color: #26A6B8;
+  background-color: #DEBB0D;
 }
