add_study_set_form formatted & functional

--- a/app/assets/stylesheets/api/klasses.scss
+++ b/app/assets/stylesheets/api/klasses.scss
@@ -54,6 +54,22 @@
 }
 
 
+.add_study_set_form {
+  padding: 10px;
+}
+
+.add_study_set_form h2 {
+  margin: 15px
+}
+
+.add_study_set_form .btn {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+
 /* FORM */
 
 .klass_form {
