--- a/app/assets/stylesheets/api/study_sets.scss
+++ b/app/assets/stylesheets/api/study_sets.scss
@@ -42,6 +42,23 @@
   background: #DEBB0D;
 }
 
+.study_set .nav-tabs {
+  margin: 15px;
+  font-size: large;
+  border-bottom: 4px dashed #4A280E;
+}
+
+.study_set .nav-tabs>li {
+  margin-bottom: -4px;
+}
+
+.study_set .nav-tabs>li.active>a {
+  background-color: #FAF3EB;
+}
+
+
+
+
 
 /* FORM */
 
@@ -103,12 +120,12 @@
 
 
 table {
-  margin-left: auto;
-  margin-right:auto;
+  margin-left: 15px;
+  margin-right: 15px;
   margin-top: 20px;
   margin-bottom: 20px;
   border: 5px solid black;
-  width: 80%;
+  width: 90%;
   border-collapse: separate;
   border-radius: 0.5em;
 }
