--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 
 header, body, ul, li, div,
 form, input, textarea, footer, p
-h1, h2, h3, h4 {
+h1, h2, h3, h4, strong {
   margin: 0;
   padding: 0;
   border: 0;
