test scores render fine

--- a/app/assets/stylesheets/api/session_form.scss
+++ b/app/assets/stylesheets/api/session_form.scss
@@ -8,12 +8,12 @@
 }
 
 .session_form .errors {
-  color: #BC1818;
+  color: #D66700;
 
 }
 
 .session_form input {
-  border: 2px solid #4A280E;
+  border: 2px solid #5C5C5C;
   border-radius: 0.3em;
   margin: 0px 0px 0px 15px;
 }
@@ -21,24 +21,24 @@
 .session_form .btn {
   margin: 15px auto;
 
-  background-color: #BC1818;
+  background-color: #D66700;
   margin: 15px;
   font-weight: bold;
   font-size: large;
-  color: #E3D5C3;
+  color: #FFFFFF;
 }
 
 .session_form .btn:hover{
-  background-color: #DEBB0D;
-  color: #4A280E;
+  background-color: #F9CE1C;
+  color: #5C5C5C;
 }
 
 .session_form .modal-content {
-  background-color: #FAF3EB;
+  background-color: #FFFFFF;
 }
 
 .session_form h2 {
-  color: #4A280E;
+  color: #5C5C5C;
   margin: 10px auto;
 }
 
@@ -46,13 +46,13 @@
   text-align: center;
 }
 // .input_study_set_name {
-//   border: 2px solid #4A280E;
+//   border: 2px solid #5C5C5C;
 //   border-radius: 0.3em;
 //   font-weight: bolder;
 //   font-size: xx-large;
 //   padding: 0.3em;
 //   margin: 0px 0px 0px 7px;
-//   background-color: #E3D5C3;
-//   color: #4A280E;
+//   background-color: #FFFFFF;
+//   color: #5C5C5C;
 //   text-align: left;
 // }
