--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -5,10 +5,10 @@
 .top-header {
   position: fixed;
   z-index: 100;
-  background: #8EA800;
+  background: #02B960;
   display: flex;
   justify-content: flex-end;
-  padding: 5px;
+  padding: 5px 20px;
   width: 100%;
 }
 
@@ -29,10 +29,10 @@
 }
 
 .user_account .btn {
-  background: #FAF3EB;
+  background: #FFFFFF;
   margin: 0px 3px;
 }
 
 .user_account .btn:hover{
-  background: #E3D5C3;
+  background: #FFFFFF;
 }
