--- a/app/assets/stylesheets/api/index.css
+++ b/app/assets/stylesheets/api/index.css
@@ -2,8 +2,8 @@
 .study_set_index .title,
 .klass_index .title,
 .test_score_index .title {
-  background: #BC1818;
-  color: #E3D5C3;
+  background: #D66700;
+  color: #FFFFFF;
   padding: 0.2em 0.5em;
   text-align: right;
 }
@@ -14,7 +14,7 @@ div.list-group{
 
 button.list-group-item,
 span.list-group-item {
-  color: #4A280E;
+  color: #5C5C5C;
 }
 
 /* same as h2 */
@@ -40,11 +40,11 @@ span.list-group-item .list-group-item-heading
 .list-group-item {
   color: inherit;
   font: inherit;
-  background: #FAF3EB;
+  background: #FFFFFF;
 }
 
 button.list-group-item:hover {
-  background-color: #DEBB0D;
+  background-color: #F9CE1C;
 }
 
 .link {
