--- a/app/assets/stylesheets/api/klasses.scss
+++ b/app/assets/stylesheets/api/klasses.scss
@@ -11,13 +11,13 @@
 }
 
 .klass_header {
-  background: #BC1818;
+  background: #D66700;
   padding: 4px;
   text-align: right;
 }
 
 .klass_header .title{
-  color: #E3D5C3;
+  color: #FFFFFF;
   margin: 10px;
 }
 
@@ -43,31 +43,41 @@
 }
 
 .klass_header .btn {
-  background: #E3D5C3;
+  background: #FFFFFF;
   font-weight: bold;
   font-size: large;
 
 }
 
 .klass_header .btn:hover{
-  background: #DEBB0D;
+  background: #F9CE1C;
 }
 
-.klass .nav-tabs {
+
+/* navtabs */
+.nav-tabs {
   margin: 15px;
   font-size: large;
-  border-bottom: 4px dashed #4A280E;
+  border-bottom: 2px dashed #5C5C5C;
 }
 
-.klass .nav-tabs>li {
-  margin-bottom: -4px;
+.nav-tabs>li {
+  margin-bottom: -2px;
 }
 
-.klass .nav-tabs>li.active>a {
-  background-color: #FAF3EB;
+.nav-tabs>li.active>a {
+  background-color: #FFFFFF;
+  font-weight: bold;
+}
+
+.nav-tabs>li>a:hover {
+  background-color: #F9CE1C;
 }
 
 
+.list-group-item.active{
+  background: #26A6B8;
+}
 
 
 
@@ -89,10 +99,6 @@
 
 /* FORM */
 
-.klass_form {
-  background-color: #E3D5C3;
-}
-
 .klass_form .klass_header {
   display: flex;
   justify-content: flex-start;
@@ -106,14 +112,14 @@
 }
 
 .input_klass_name {
-  border: 2px solid #4A280E;
+  border: 2px solid #5C5C5C;
   border-radius: 0.3em;
   font-weight: bolder;
   font-size: xx-large;
   padding: 0.3em;
   margin: 0px 0px 0px 7px;
-  background-color: #E3D5C3;
-  color: #4A280E;
+  background-color: #FFFFFF;
+  color: #5C5C5C;
   text-align: left;
 }
 
@@ -129,8 +135,10 @@
 }
 
 .klass_form .details textarea {
-  border: 2px solid #4A280E;
+  border: 2px solid #5C5C5C;
   border-radius: 0.3em;
+  min-width: 500px;
+  min-height: 150px;
   margin: 0px 0px 0px 10px;
 }
 
@@ -140,10 +148,9 @@
 
 .klass_form select{
   margin: 0px 0px 0px 5px;
-  background-color: #E3D5C3;
+  border: 2px solid #5C5C5C;
+  border-radius: 0.3em;
 }
-
-.klass_form
 
 .klass_form .btn-group {
   display: table;
@@ -153,14 +160,15 @@
 }
 
 .klass_form .btn {
-  background-color: #BC1818;
-  margin: 15px;
+  background-color: #D66700;
+  margin: auto;
   font-weight: bold;
   font-size: large;
-  color: #E3D5C3;
+  color: #FFFFFF;
+  display: table;
 }
 
 .klass_form .btn:hover{
-  background-color: #DEBB0D;
-  color: #4A280E;
+  background-color: #F9CE1C;
+  color: #5C5C5C;
 }
