--- a/app/assets/stylesheets/api/content.scss
+++ b/app/assets/stylesheets/api/content.scss
@@ -1,33 +1,34 @@
 
 .app {
-  position: relative;
-  max-width: 1200px;
+position: relative;
 }
 
 .top-header {
+  max-width: 1500px;
   width: 100%;
 }
 
 .main {
   position: absolute;
   top: 38px;
-  left: 350px;
+  display: flex;
+  max-width: 1500px;
+  width: 100%;
   color: #5C5C5C;
   background: #FFFFFF;
   min-height: 200px;
-  padding: 20px;
-  width: 850px;
 }
 
 .main > div{
-  width: 100%;
+  width: 70%;
+  min-width: 945px;
+  padding: 20px;
+
 }
 
-.app>aside{
-  position: fixed;
-  top: 38px;
-  left: 0px;
-  width: 350px;
+.main > aside{
+  width: 30%;
+  min-width: 300px;
   padding: 20px;
 }
 
@@ -58,9 +59,10 @@
 
 .orange-btn {
   background: #D66700;
+  color: #FFFFFF;
 }
 
-.lightgreen-btn {
+.blue-btn {
   background: #26A6B8;
   color: #FFFFFF;
 }
