search feature functional for single words

--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -36,3 +36,20 @@
 .user_account .btn:hover{
   background: #FFFFFF;
 }
+
+.search-bar h3{
+  border: 0.5px solid #5C5C5C;
+  border-radius: 0.2em;
+  height: 30px;
+}
+
+.search-bar input{
+  height: 100%;
+  background: #FFFFFF;
+}
+
+.search-bar button {
+  background: #02B960;
+  height: 100%;
+
+}
