--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -10,6 +10,7 @@
   justify-content: flex-end;
   padding: 5px 20px;
   width: 100%;
+  height: 40px;
 }
 
 
@@ -38,7 +39,7 @@
 }
 
 .search-bar h3{
-  border: 0.5px solid #5C5C5C;
+  border: 0.5px solid #FFFFFF;
   border-radius: 0.2em;
   height: 30px;
 }
@@ -51,5 +52,6 @@
 .search-bar button {
   background: #02B960;
   height: 100%;
+  vertical-align: top;
 
 }
