--- a/app/assets/stylesheets/api/klasses.scss
+++ b/app/assets/stylesheets/api/klasses.scss
@@ -93,6 +93,12 @@
   color: #FFFFFF;
 }
 
+.add_study_set_form .btn {
+  background: #FFFFFF;
+  font-weight: bold;
+  font-size: large;
+}
+
 
 .add_study_set_form {
   padding: 10px;
