--- a/app/assets/stylesheets/api/session_form.scss
+++ b/app/assets/stylesheets/api/session_form.scss
@@ -18,6 +18,10 @@
   margin: 0px 0px 0px 15px;
 }
 
+.session_form input[disabled] {
+  background: #5C5C5C;
+}
+
 .session_form .btn {
   margin: 15px auto;
 
