--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -7,12 +7,15 @@
   z-index: 100;
   background: #02B960;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 5px 20px;
   width: 100%;
   height: 40px;
 }
 
+.top-header div>h2 {
+  color: #FFFFFF;
+}
 
 .user_account {
   display: flex;
