--- a/app/assets/stylesheets/api/study_sets.scss
+++ b/app/assets/stylesheets/api/study_sets.scss
@@ -181,3 +181,58 @@ td input{
 .study_set .test li {
   margin: 5px;
 }
+
+.study_set .btn {
+  font-weight: bold;
+}
+
+
+.card {
+  position: relative;
+  text-align: center;
+  width: 60%;
+  margin: auto;
+  height: 400px;
+  border: 2px solid #5C5C5C;
+}
+
+.card.front,
+.card.back{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background: #FFFFFF;
+  transition: transform 0.5s;
+}
+
+.card span {
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.card.front{
+  transform: rotateX(0deg);
+}
+
+.card.back {
+  transform: rotateX(-180deg);
+}
+
+.card.front.flipped{
+  transform: rotateX(-180deg);
+}
+
+.card.back.flipped {
+  transform: rotateX(0deg);
+}
+
+.flashcards .carousel-control.right,
+.flashcards .carousel-control.left {
+  background-image: none;
+}
