--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -13,6 +13,14 @@
   height: 40px;
 }
 
+.logo a,
+.logo a:hover{
+  font: inherit;
+  font-size: inherit;
+  color: inherit;
+  text-decoration: none;
+}
+
 .top-header div>h2 {
   color: #FFFFFF;
 }
@@ -26,6 +34,10 @@
 .user_account>.item{
   padding: 2px;
   margin: 3px;
+}
+
+.user_account h3 {
+  color:#FFFFFF;
 }
 
 .user_account p {
