--- a/app/assets/stylesheets/api/welcome.scss
+++ b/app/assets/stylesheets/api/welcome.scss
@@ -7,10 +7,10 @@
 
 .welcome h1,
 .about h1{
-  background: #26A6B8;
+  background: #F9CE1C;
   width: 100%;
   text-align: center;
-  color: #FFFFFF;
+  color: #5C5C5C;
   padding: 5px;
 }
 
